SERVER-42946 Prevent FCV upgrade/downgrade when in standalone mode with a non-empty config.transactions table.